# image-compress-pkg

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: ThreadPool.h
launch/: multithread.launch
src/: main.cpp
